# Mu3e-SciFi-Timing-Study

./: .gitignore  CMakeLists.txt  README.md  run_partial_analysis.py
analysis/: analyze_scifi.py
macros/: run.mac  vis.mac
src/: main.cc
